processed/jira/txt/LU/LU-9020.txt
Key:        LU-9020
Summary:    Where is libcfs_sock_wmem_queued defined in b2_8/b2_9
Link:       https://jira.whamcloud.com/browse/LU-9020
Type:       Question/Request
Priority:   Minor
Status:     Resolved
Resolution: Not a Bug
Assignee:   WC Triage
Reporter:   Jay Lan
Created:    Fri, 13 Jan 2017 19:05:05 +0000
Updated:    Fri, 13 Jan 2017 22:03:33 +0000
Resolved:   Fri, 13 Jan 2017 22:03:33 +0000

--- Environment ---
build

--- Description ---
'libcfs_sock_wmem_queued' is referenced in lnet/klnds/socklnd/

{socklnd.c,socklnd_cb.c}
.

It is defined in b2_7 in libcfs/include/libcfs/linux/linux-tcpip.h:

static inline int

libcfs_sock_wmem_queued(struct socket *sock)

{

        return sock->sk->sk_wmem_queued;

}

But that file is removed in b2_8 and b2_9.

I tried to compile b2_9 and compilation failed:

tmp/rpmbuild-lustre-jlan-MP8FuBPN/BUILD/lustre-2.9.0/lnet/klnds/socklnd/socklnd_cb.c: In function 'ksocknal_check_peer_timeouts':

/tmp/rpmbuild-lustre-jlan-MP8FuBPN/BUILD/lustre-2.9.0/lnet/klnds/socklnd/socklnd_cb.c:2492:3: error: implicit declaration of function 'libcfs_sock_wmem_queued' [-Werror=implicit-function-declaration]

   CNETERR("Total %d stale ZC_REQs for peer %s detected; the "

   ^

cc1: all warnings being treated as errors

/usr/src/linux-4.4.21-84.1.20161207nasa/scripts/Makefile.build:259: recipe for target '/tmp/rpmbuild-lustre-jlan-MP8FuBPN/BUILD/lustre-2.9.0/lnet/klnds/socklnd/socklnd_cb.o' failed

Where is libcfs_sock_wmem_queued defined in b2_9? How do I get it compiled?

Need help!

--- Comment (pjones, Fri, 13 Jan 2017 22:03:33 +0000) ---
ok - thanks Jay

--- Comment (jaylan, Fri, 13 Jan 2017 21:41:12 +0000) ---
I git clone from 

    origin	git://git.whamcloud.com/fs/lustre-release.git (fetch)

branch b2_9. It was done about 5 weeks ago. Tags are v2_9_0_0, v2_9_0, 2.9.0.

I just compared my copy of socklnd_cb.c with one here:

https://git.hpdd.intel.com/?p=fs/lustre-release.git;a=blob;f=lnet/klnds/socklnd/socklnd_cb.c;h=77dde2320727e29b1dba35c878a5b186318b81db;hb=refs/heads/b2_9

and they are different.

I will figure out why my git clone copy is not what it should be. Hmm, I actually I rebased my nasa 2.7.2 tree (from FE repo) to b2_9 to create nasa 2.9.0... Bad idea I guess.

Please close this ticket. Thanks!

--- Comment (simmonsja, Fri, 13 Jan 2017 20:50:17 +0000) ---
libcfs_sock_wmem_queued was removed some time ago. Instead the code just access the struct sock field directly. What lustre source tree are you using? I don't see this function in vanilla 2.8 or 2.9.
